Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9202

lfsck_layout_assistant_sync_failures()) ASSERTION( ltd != ((void *)0) ) failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.10.0
    • None
    • None
    • 3
    • 9223372036854775807

      The logs show that:

      Mar  6 08:36:33 lfs-sa-mds kernel: LustreError: 9819:0:(fld_handler.c:260:fld_server_lookup()) srv-lfs1-MDT0000: Cannot find sequence 0x200000e84012d82: rc = -2
      Mar  6 08:36:33 lfs-sa-mds kernel: LustreError: 9819:0:(fld_handler.c:260:fld_server_lookup()) srv-lfs1-MDT0000: Cannot find sequence 0x200000f3600fa05: rc = -2
      Mar  6 08:36:33 lfs-sa-mds kernel: LustreError: 9819:0:(fld_handler.c:260:fld_server_lookup()) Skipped 64 previous similar messages
      Mar  6 08:36:34 lfs-sa-mds kernel: LustreError: 9819:0:(fld_handler.c:260:fld_server_lookup()) srv-lfs1-MDT0000: Cannot find sequence 0x200000eb0015479: rc = -2
      Mar  6 08:36:34 lfs-sa-mds kernel: LustreError: 9819:0:(fld_handler.c:260:fld_server_lookup()) Skipped 1167 previous similar messages
      Mar  6 08:36:40 lfs-sa-mds kernel: LustreError: 9819:0:(fld_handler.c:260:fld_server_lookup()) srv-lfs1-MDT0000: Cannot find sequence 0x200000e98017922: rc = -2
      Mar  6 08:36:40 lfs-sa-mds kernel: LustreError: 9819:0:(fld_handler.c:260:fld_server_lookup()) Skipped 3870 previous similar messages
      Mar  6 08:36:44 lfs-sa-mds kernel: LustreError: 9819:0:(lfsck_layout.c:284:lfsck_layout_assistant_sync_failures()) ASSERTION( ltd != ((void *)0) ) failed: 
      Mar  6 08:36:44 lfs-sa-mds kernel: LustreError: 9819:0:(lfsck_layout.c:284:lfsck_layout_assistant_sync_failures()) LBUG
      Mar  6 08:36:44 lfs-sa-mds kernel: Pid: 9819, comm: lfsck_layout
      Mar  6 08:36:44 lfs-sa-mds kernel: 
      Mar  6 08:36:44 lfs-sa-mds kernel: Call Trace:
      Mar  6 08:36:44 lfs-sa-mds kernel: [<ffffffffa02cd875>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
      Mar  6 08:36:44 lfs-sa-mds kernel: [<ffffffffa02cde77>] lbug_with_loc+0x47/0xb0 [libcfs]
      Mar  6 08:36:44 lfs-sa-mds kernel: [<ffffffffa0cceb91>] lfsck_layout_assistant_sync_failures+0x4c1/0x4d0 [lfsck]
      Mar  6 08:36:44 lfs-sa-mds kernel: [<ffffffffa0ca64b2>] lfsck_assistant_notify_others+0x5d2/0x1490 [lfsck]
      Mar  6 08:36:44 lfs-sa-mds kernel: [<ffffffffa0ca9cf0>] lfsck_assistant_engine+0x930/0x1e50 [lfsck]
      Mar  6 08:36:44 lfs-sa-mds kernel: [<ffffffff81060530>] ? __dequeue_entity+0x30/0x50
      Mar  6 08:36:44 lfs-sa-mds kernel: [<ffffffff810672b0>] ? default_wake_function+0x0/0x20
      Mar  6 08:36:44 lfs-sa-mds kernel: [<ffffffffa0ca93c0>] ? lfsck_assistant_engine+0x0/0x1e50 [lfsck]
      Mar  6 08:36:44 lfs-sa-mds kernel: [<ffffffff810a0fce>] kthread+0x9e/0xc0
      Mar  6 08:36:44 lfs-sa-mds kernel: [<ffffffff8100c28a>] child_rip+0xa/0x20
      Mar  6 08:36:44 lfs-sa-mds kernel: [<ffffffff810a0f30>] ? kthread+0x0/0xc0
      Mar  6 08:36:44 lfs-sa-mds kernel: [<ffffffff8100c280>] ? child_rip+0x0/0x20
      Mar  6 08:36:44 lfs-sa-mds kernel: 
      

            yong.fan nasf (Inactive)
            yong.fan nasf (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: